[project]
name = "tuspyserver-example-nginx"
version = "0.1.0"
description = "Advanced tuspyserver example building on the basic example with an nginx reverse proxy; requires docker compose"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.20.0",
    "tuspyserver>=4.0.0",
]

[tool.uv.sources]
tuspyserver = { workspace = true }
